# obscura

./: .gitignore  Cargo.toml  README.md
crates/obscura-browser/src/: context.rs  lib.rs  lifecycle.rs  page.rs
crates/obscura-cdp/src/: cookie_params.rs  dispatch.rs  lib.rs  server.rs  util.rs
crates/obscura-cdp/src/domains/: accessibility.rs  browser.rs  dom.rs  domsnapshot.rs  fetch.rs  input.rs  mod.rs  network.rs  page.rs  runtime.rs  target.rs
crates/obscura-cdp/tests/: concurrent_navigations.rs  control_plane_unblocked.rs
crates/obscura-cli/src/: main.rs  worker.rs
crates/obscura-cli/tests/: mcp_client.rs
crates/obscura-dom/src/: selector.rs  tree.rs
crates/obscura-js/js/: bootstrap.js
crates/obscura-js/src/: lib.rs  module_loader.rs  ops.rs  runtime.rs
crates/obscura-mcp/src/: http.rs  lib.rs
crates/obscura-net/: Cargo.toml
crates/obscura-net/src/: client.rs  cookies.rs  encoding.rs  lib.rs  wreq_client.rs
crates/obscura/src/: browser.rs  config.rs  cookie.rs  page.rs
